--- a/PedidoVenda/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/PedidoVenda/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -18,7 +18,7 @@
 	<h:body>
 		<p:ajaxStatus styleClass="ajax-status">
 			<f:facet name="start">
-				<h:graphicImage library="images" name="loading.gif" width="20px" height= "20px" />
+				<h:graphicImage library="images" name="loading.gif"/>
 			</f:facet>
 			<f:facet name="complete">
 				<h:outputText value=" "/>
