--- a/PedidoVenda/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/PedidoVenda/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -13,10 +13,11 @@
 			<ui:insert name="title">sistema de Pedido de Venda</ui:insert>
 		</title>
 		<h:outputStylesheet library="css" name="sistema.css" />
+		<h:outputScript library="js" name="jquery.maskMoney.js" />
 	</h:head>
 	
 	<h:body>
-		<p:ajaxStatus styleClass="ajax-status">
+		<p:ajaxStatus styleClass="ajax-status" onsuccess="configurarMoeda()">
 			<f:facet name="start">
 				<h:graphicImage library="images" name="loading.gif"/>
 			</f:facet>
@@ -42,5 +43,14 @@
 		<footer>
 			Curso Online de Sistemas Comerciais Java EE Com CDI, JPA e PrimeFaces - <a href="http://www.algaworks.com/" target="_blank">www.algaworks.com</a>
 		</footer>
+		
+		<script>
+			function configurarMoeda(){
+				$(".moeda").maskMoney({allowNegative: true, thousands:'.', decimal:','});
+			}
+			$(document).ready(function(){
+				configurarMoeda();
+			});
+		</script>
 	</h:body>
 </html>
